# DIYRobotChallengeSim

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
docker/: Dockerfile  README.md  build.sh  start.sh
src/app/example/: README.md  package.xml  setup.cfg  setup.py
src/app/example/example/: example_node.py
src/app/example/launch/: example.launch.py
src/sim/: CMakeLists.txt  README.md  package.xml
src/sim/config/: bridge_config.yaml
src/sim/launch/: load_sim.launch.py
src/sim/models/ackermann_car/: model.config  model.sdf
src/sim/models/crazy_ball/: model.config  model.sdf
src/sim/models/grass_plane/: model.config  model.sdf
src/sim/models/grass_plane/meshes/: grass_plane.dae
src/sim/models/hoop/: model.config  model.sdf
src/sim/models/hoop/meshes/: hoop.dae
src/sim/models/line/: model.config  model.sdf
src/sim/models/ramp/: model.config  model.sdf
src/sim/models/ramp/meshes/: ramp.dae
src/sim/models/start_signal/: model.config  model.sdf
src/sim/models/straw_bale/: model.config  model.sdf
src/sim/models/straw_bale/meshes/: strawbale_noise.dae
src/sim/plugins/: crazy_ball_plugin.cpp  start_signal_plugin.cpp
src/sim/scripts/: generate_world_from_drawio.py  layout1.drawio
src/sim/worlds/: track_layout1.world  track_layout2.world
